--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,12 @@
       </intent-filter>
     </activity-alias>
 
+    <receiver android:name=".service.AmbientUpdateReceiver">
+      <intent-filter>
+        <action android:name="io.github.jbarr21.runterval.action.AMBIENT_UPDATE" />
+      </intent-filter>
+    </receiver>
+
     <uses-library
       android:name="com.google.android.wearable"
       android:required="true" />
