--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
     android:label="@string/app_name"
     android:name=".app.App"
     android:supportsRtl="true"
-    android:theme="@style/Theme.AppCompat">
+    android:theme="@style/AppTheme">
 
     <activity android:name=".ui.LauncherActivity" />
     <activity android:name=".ui.WorkoutActivity" />
