--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,12 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 27
+    buildToolsVersion '28.0.2'
+    compileSdkVersion 28
     defaultConfig {
         applicationId "io.github.jbarr21.runterval"
         minSdkVersion 25
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
     }
@@ -28,35 +29,45 @@ androidExtensions {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
-    implementation 'com.google.android.gms:play-services-wearable:11.4.2'
-    implementation "com.android.support:appcompat-v7:27.0.0"
-    implementation 'com.android.support:recyclerview-v7:27.0.0'
-    implementation 'com.android.support:support-v4:27.0.0'
-    implementation 'com.android.support:wear:27.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0-beta3'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation 'com.google.android.gms:play-services-wearable:15.0.1'
+    implementation "com.android.support:appcompat-v7:28.0.0-rc02"
+    implementation 'com.android.support:recyclerview-v7:28.0.0-rc02'
+    implementation 'com.android.support:support-v4:28.0.0-rc02'
+    implementation 'com.android.support:wear:28.0.0-rc02'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
-    implementation 'com.google.android.support:wearable:2.1.0'
-    compileOnly 'com.google.android.wearable:wearable:2.1.0'
+    implementation 'com.google.android.support:wearable:2.3.0'
+    compileOnly 'com.google.android.wearable:wearable:2.3.0'
 
     // Rx
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.5'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.1'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation 'com.jakewharton.rxrelay2:rxrelay:2.0.0'
     implementation 'com.jakewharton.rxbinding2:rxbinding-kotlin:2.0.0'
     implementation 'com.jakewharton.rxbinding2:rxbinding-design-kotlin:2.0.0'
     implementation 'com.jakewharton.rxbinding2:rxbinding-recyclerview-v7-kotlin:2.0.0'
     implementation 'com.jakewharton.rxbinding2:rxbinding-support-v4-kotlin:2.0.0'
     implementation 'com.f2prateek.rx.preferences2:rx-preferences:2.0.0-RC3'
-    implementation 'com.uber.autodispose:autodispose-android-archcomponents:0.4.0'
-    implementation 'com.uber.autodispose:autodispose-kotlin:0.4.0'
+    implementation 'com.uber.autodispose:autodispose-android-archcomponents:1.0.0-RC2'
+    implementation 'com.uber.autodispose:autodispose-ktx:1.0.0-RC2'
 
     // JW
     implementation 'com.jakewharton:kotterknife:0.1.0-SNAPSHOT'
     implementation 'com.jakewharton.threetenabp:threetenabp:1.0.5'
-    implementation 'com.jakewharton.timber:timber:4.5.1'
+    implementation 'com.jakewharton.timber:timber:4.7.0'
+
+    // Redux
+    implementation 'me.tatarka.redux:redux-core:0.10'
+    implementation 'me.tatarka.redux:redux-android:0.10'
+    implementation 'me.tatarka.redux:redux-android-lifecycle:0.10'
+    implementation 'me.tatarka.redux:redux-thunk:0.10'
+    implementation 'me.tatarka.redux:redux-rx:0.10'
+    implementation 'me.tatarka.redux:redux-rx2:0.10'
+    implementation 'org.rekotlin:rekotlin:1.0.0'
 
     // Misc
-    implementation 'io.github.inflationx:viewpump:1.0.0'
+    implementation 'org.koin:koin-android:0.9.3'
     implementation 'com.github.pardom:redux-kotlin:1.2.1'
+    implementation 'io.github.inflationx:viewpump:1.0.0'
 }
