--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,13 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 
 android {
-    buildToolsVersion '28.0.2'
-    compileSdkVersion 28
+    buildToolsVersion '30.0.3'
+    compileSdkVersion 30
     defaultConfig {
         applicationId "io.github.jbarr21.runterval"
         minSdkVersion 25
-        targetSdkVersion 28
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
     }
@@ -24,38 +23,31 @@ android {
     }
 }
 
-androidExtensions {
-    experimental = true
-}
-
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation 'com.google.android.gms:play-services-wearable:15.0.1'
-    implementation "com.android.support:appcompat-v7:28.0.0-rc02"
-    implementation 'com.android.support:recyclerview-v7:28.0.0-rc02'
-    implementation 'com.android.support:support-v4:28.0.0-rc02'
-    implementation 'com.android.support:wear:28.0.0-rc02'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-
-    implementation 'com.google.android.support:wearable:2.3.0'
-    compileOnly 'com.google.android.wearable:wearable:2.3.0'
+    implementation 'com.google.android.gms:play-services-wearable:17.1.0'
+    implementation 'androidx.appcompat:appcompat:1.4.0-alpha02'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.core:core-ktx:1.5.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.wear:wear:1.2.0-alpha10'
 
     // Rx
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.1'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
-    implementation 'com.jakewharton.rxrelay2:rxrelay:2.0.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'com.jakewharton.rxrelay2:rxrelay:2.1.1'
     implementation 'com.jakewharton.rxbinding2:rxbinding-kotlin:2.0.0'
     implementation 'com.jakewharton.rxbinding2:rxbinding-design-kotlin:2.0.0'
     implementation 'com.jakewharton.rxbinding2:rxbinding-recyclerview-v7-kotlin:2.0.0'
     implementation 'com.jakewharton.rxbinding2:rxbinding-support-v4-kotlin:2.0.0'
-    implementation 'com.f2prateek.rx.preferences2:rx-preferences:2.0.0-RC3'
-    implementation 'com.uber.autodispose:autodispose-android-archcomponents:1.0.0-RC2'
-    implementation 'com.uber.autodispose:autodispose-ktx:1.0.0-RC2'
+    implementation 'com.f2prateek.rx.preferences2:rx-preferences:2.0.0'
+    implementation 'com.uber.autodispose:autodispose-android-archcomponents:1.4.0'
+    implementation 'com.uber.autodispose:autodispose:1.4.0'
 
     // JW
     implementation 'com.jakewharton:kotterknife:0.1.0-SNAPSHOT'
     implementation 'com.jakewharton.threetenabp:threetenabp:1.0.5'
-    implementation 'com.jakewharton.timber:timber:4.7.0'
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 
     // Redux
     implementation 'me.tatarka.redux:redux-core:0.10'
@@ -68,6 +60,5 @@ dependencies {
 
     // Misc
     implementation 'org.koin:koin-android:0.9.3'
-    implementation 'com.github.pardom:redux-kotlin:1.2.1'
-    implementation 'io.github.inflationx:viewpump:1.0.0'
+    implementation 'io.github.inflationx:viewpump:2.0.3'
 }
