--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,18 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
+    ext.autodispose_version = '1.4.0'
     ext.kotlin_version = '1.5.10'
+    ext.compose_version = '1.0.0-beta09'
+    ext.coroutines_version = '1.4.3'
+    ext.hilt_version = '2.36'
+
     repositories {
         google()
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.0-beta03'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.10"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath("com.google.dagger:hilt-android-gradle-plugin:$hilt_version")
     }
 }
 
