--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
+apply plugin: 'dagger.hilt.android.plugin'
 
 android {
     buildToolsVersion '30.0.3'
@@ -20,6 +22,12 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    buildFeatures {
+        compose true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion = "$compose_version"
+    }
 }
 
 dependencies {
@@ -31,6 +39,13 @@ dependencies {
     api 'androidx.recyclerview:recyclerview:1.2.1'
     api 'androidx.wear:wear:1.2.0-alpha10'
 
+    // Compose
+    api "androidx.activity:activity-compose:1.3.0-beta02"
+    api "androidx.compose.ui:ui:$compose_version"
+    api "androidx.compose.material:material:$compose_version"
+    api "androidx.compose.ui:ui-tooling:$compose_version"
+    api "androidx.constraintlayout:constraintlayout-compose:1.0.0-alpha08"
+
     // Rx
     api 'io.reactivex.rxjava2:rxjava:2.2.21'
     api 'io.reactivex.rxjava2:rxandroid:2.1.1'
@@ -40,8 +55,10 @@ dependencies {
     api 'com.jakewharton.rxbinding2:rxbinding-recyclerview-v7-kotlin:2.0.0'
     api 'com.jakewharton.rxbinding2:rxbinding-support-v4-kotlin:2.0.0'
     api 'com.f2prateek.rx.preferences2:rx-preferences:2.0.0'
-    api 'com.uber.autodispose:autodispose-android-archcomponents:1.4.0'
-    api 'com.uber.autodispose:autodispose:1.4.0'
+
+    api "com.uber.autodispose:autodispose-coroutines-interop:$autodispose_version"
+    api "com.uber.autodispose:autodispose-android-archcomponents:$autodispose_version"
+    api "com.uber.autodispose:autodispose:$autodispose_version"
 
     // JW
     api 'com.jakewharton:kotterknife:0.1.0-SNAPSHOT'
@@ -51,13 +68,24 @@ dependencies {
     // Redux
     api 'me.tatarka.redux:redux-core:0.10'
     api 'me.tatarka.redux:redux-android:0.10'
-    api 'me.tatarka.redux:redux-android-lifecycle:0.10'
-    api 'me.tatarka.redux:redux-thunk:0.10'
-    api 'me.tatarka.redux:redux-rx:0.10'
     api 'me.tatarka.redux:redux-rx2:0.10'
-    api 'org.rekotlin:rekotlin:1.0.0'
+
+    // Coroutines
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-rx2:$coroutines_version"
+
+    // ViewModel
+    api "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
+
+    // Hilt
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+    api "com.google.dagger:hilt-android:$hilt_version"
+    api "androidx.hilt:hilt-navigation-compose:1.0.0-alpha03"
+
+    // Nav
+    api "androidx.navigation:navigation-compose:2.4.0-alpha03"
 
     // Misc
-    api 'org.koin:koin-android:0.9.3'
     api 'io.github.inflationx:viewpump:2.0.3'
 }
